# scope_test

./: README.md  main.py  pyproject.toml
data/: users.csv
templates/: footer.html  header.html  main.html  main_template.html  title_page.html
